# LiquidEngineCookieCutter

./: LICENSE.txt  README.md  cookiecutter.json  pyproject.toml  setup.py  test_package.py
hooks/: post_gen_project.py  pre_gen_project.py
src/MyPackage/: MyLiquidEngine.pyx
{{cookiecutter.directory_name}}/: README.md  noxfile.py  pyproject.toml  runNoxTools.py  setup.py  test.py
{{cookiecutter.directory_name}}/.github/workflows/: test.yml
{{cookiecutter.directory_name}}/src/include/: _c_{{cookiecutter.file_name}}.c  _c_{{cookiecutter.file_name}}.h
{{cookiecutter.directory_name}}/src/mako_templates/: {{cookiecutter.package_name}}.{{cookiecutter.file_name}}.cl  {{cookiecutter.package_name}}.{{cookiecutter.file_name}}.pyx
{{cookiecutter.directory_name}}/src/{{cookiecutter.package_name}}/: {{cookiecutter.file_name}}.pyx
{{cookiecutter.directory_name}}/tests/: test_{{cookiecutter.class_name}}.py
