[build-system]
requires = ["setuptools>=43.0.0", "wheel", "cython", "build","mako","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "0.0.1"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }

dependencies = [
    "cython",
    "nanopyx",
    "mako"
]


