[build-system]
requires = ["setuptools>=43.0.0", "wheel", "cython", "build","mako","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "0.0.1"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }

dependencies = [
    "cython",
    "nanopyx",
    "mako",
    "nox>=2022.11.21",
    "pytest==7.2", # required to work with pytest-cython (https://github.com/lgpage/pytest-cython/issues/58)
    "pytest-icdiff>=0.6",    # https://github.com/hjwp/pytest-icdiff
    "pytest-clarity>=1.0.1", # https://pypi.org/project/pytest-clarity/
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.1.0",
    "pytest-sugar>=0.9.6",
    "pytest-cython>=0.2.0",
]

[tool.pytest.ini_options]
addopts = ""
timeout = 6001
doctest_encoding = "latin1"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
# Filters are standard python warning filters as described here:
# https://docs.python.org/3/library/warnings.html#the-warnings-filter
filterwarnings = [
    "ignore:.*distutils.*:DeprecationWarning:.*",
    "ignore:.*distutils.*:UserWarning:.*",
    "ignore:.*The 'u' format is deprecated.*:DeprecationWarning:pywintypes",
    "ignore:.*Deprecated NumPy.*:DeprecationWarning:.*",
]
testpaths = ["tests"]
